header button alignment & create-set user issue

--- a/app/components/Search/SearchConcepts/SearchConcepts.scss
+++ b/app/components/Search/SearchConcepts/SearchConcepts.scss
@@ -10,7 +10,7 @@
 		box-shadow: 0 1px 4px #e3e3e3;
 		padding: 20px 20px 20px 20px !important;
 		border: 1px solid #e3e3e3;
-		border-radius: 0.25em;	
+		border-radius: 3px;	
 		margin-top: 10px;
 		li {
 			list-style-type: none;
@@ -59,10 +59,11 @@
 				font-style: italic;
 				color: #9991a0;
 			}
-			.subject {
+			.subject_item {
 				display: inline-block;	
 				font-size: 14.5px;
-				color: #1a0dab;				
+				color: #1a0dab;	
+				white-space: nowrap;
 			}
 			:not(:first-child) {
 					margin-left: 10px;
